# power-iterator

./: .gitignore  .gitmodules  CMakeLists.memoized-member.in  CMakeLists.txt  LICENSE  README.md  combination_iterator.h  combination_iterator.hpp  combination_iterator_test.cpp  conanfile.py  power_iterator.hpp  power_iterator_test.cpp
design/: Combinations(5,3)Example.xml  Iterators.md  Iterators.odt
doc/design/: Iterators.md
doc/spec/: CombinationIterator.md  PowerSetIterator.md
include/: combination_iterator.h  combination_iterator.hpp  power_iterator.hpp
spec/: CombinationIterator.md  CombinationIterator.odt  PowerSetIterator.md  PowerSetIterator.odt
test/: combination_iterator_test.cpp  power_iterator_test.cpp
